tela de editar funcionario funcional, ajustes no css da parte de gerencia, função de admin como campo editavel e tradução dos cargos de cada funcionario (cpf e data de nascimento nao editaveis)